2003-11-24  Karl Berry  <karl@gnu.org>

	* doc/Makefile.am (EXTRA_DIST): remove no-longer-defined
	noinst_SCRIPTS.

2003-11-24  Akim Demaille  <akim@epita.fr>

	* configure.ac (HELP2MAN): Look for it.
	* doc/help2man: Remove.
	* doc/Makefile.am (HELP2MAN, noinst_SCRIPT): Remove.
	(common_mandeps): Don't depend on HELP2MAN which can be a complex
	command such as "missing --run help2man.

2003-11-24  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex: doc/\global fixes.

2003-11-24  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/cmds.c: new command @listoffloats.

	* makeinfo/float.c (count_floats_of_type_in_chapter): only count
	floats with @anchors.
	(cm_listoffloats): new function.

	* makeinfo/insertion.c (end_insertion): do not prepend float type and
	number if no @anchors.

2003-11-24  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/xml.c:
	* makeinfo/xml.h: new element listoffloats.

2003-11-24  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/makeinfo.h: number sections by default.

2003-11-24  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/makeinfo.c (cm_xref): if a reference is being made to a
	float with only one parameter, use the float number in HTML, and
	prepend it to the link in Info outputs.

2003-11-24  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/float.h:
	* makeinfo/float.c (get_float_ref): new function to retrieve a float's
	number by its id.

2003-11-24  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/insertion.c (end_insertion): indent the first paragraph
	after @float.

2003-11-24  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/cmds.c: new commands @float and @caption.

	* makeinfo/insertion.h: new environment floatenv.

	* makeinfo/insertion.c (cm_float, cm_caption): new functions.
	(begin_insertion, end_insertion): handle floatenv.

	* makeinfo/xml.c:
	* makeinfo/xml.h: new elements float, floattype, caption, floattable,
	floatfigure, floatexample.

	* makeinfo/insertion.c (cm_example):
	* makeinfo/xml.c (xml_insert_docbook_image, xml_begin_multitable):